--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,63 +31,65 @@ const { title } = Astro.props;
         <slot />
       </main>
 
-      <footer class="[grid-area:player] min-h-[100px]">
+      <footer class="[grid-area:player] h-[80px]">
         <Player transition:name="media-player" transition:persist client:load />
       </footer>
     </div>
-  </body><style>
-    #app {
-      display: grid;
-      grid-template-areas:
-        "aside main main"
-        "player player player";
-      grid-template-columns: 350px 1fr;
-      grid-template-rows: 1fr auto;
-    }
-  </style>
 
-  <style is:global>
-    html {
-      font-family: "CircularStd", system-ui, sans-serif;
-      background: #010101;
-      color: #ffffff;
-    }
-    @font-face {
-      font-family: "CircularStd";
-      src: url("/fonts/CircularStd-Light.woff2") format("woff2");
-      font-weight: 300;
-      font-style: normal;
-      font-display: swap;
-    }
-    @font-face {
-      font-family: "CircularStd";
-      src: url("/fonts/CircularStd-Book.woff2") format("woff2");
-      font-weight: 400;
-      font-style: normal;
-      font-display: swap;
-    }
-    @font-face {
-      font-family: "CircularStd";
-      src: url("/fonts/CircularStd-Medium.woff2") format("woff2");
-      font-weight: 500;
-      font-style: normal;
-      font-display: swap;
-    }
+    <style>
+      #app {
+        display: grid;
+        grid-template-areas:
+          "aside main main"
+          "player player player";
+        grid-template-columns: 350px 1fr;
+        grid-template-rows: 1fr auto;
+      }
+    </style>
 
-    @font-face {
-      font-family: "CircularStd";
-      src: url("/fonts/CircularStd-Bold.woff2") format("woff2");
-      font-weight: 700;
-      font-style: normal;
-      font-display: swap;
-    }
+    <style is:global>
+      html {
+        font-family: "CircularStd", system-ui, sans-serif;
+        background: #010101;
+        color: #ffffff;
+      }
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Light.woff2") format("woff2");
+        font-weight: 300;
+        font-style: normal;
+        font-display: swap;
+      }
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Book.woff2") format("woff2");
+        font-weight: 400;
+        font-style: normal;
+        font-display: swap;
+      }
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Medium.woff2") format("woff2");
+        font-weight: 500;
+        font-style: normal;
+        font-display: swap;
+      }
 
-    @font-face {
-      font-family: "CircularStd";
-      src: url("/fonts/CircularStd-Black.woff2") format("woff2");
-      font-weight: 900;
-      font-style: normal;
-      font-display: swap;
-    }
-  </style>
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Bold.woff2") format("woff2");
+        font-weight: 700;
+        font-style: normal;
+        font-display: swap;
+      }
+
+      @font-face {
+        font-family: "CircularStd";
+        src: url("/fonts/CircularStd-Black.woff2") format("woff2");
+        font-weight: 900;
+        font-style: normal;
+        font-display: swap;
+      }
+    </style>
+  </body>
 </html>
